# my-animal-crossing-app

./: README.md
AnimalCrossingApp/: settings.gradle.kts
AnimalCrossingServer/: .dockerignore  .gitignore  ASYNC_QUICK_REFERENCE.md  Dockerfile  IMPORT_COMMANDS.md  README.md  REVISION_COMMANDS.md  api.dockerfile  automatcher.dockerfile  compose.yaml  docker-compose.api.yaml  docker-compose.import-event-orchestrator.yaml  docker-compose.kafka.yaml  docker-compose.logging.yaml  docker-compose.mariadb.yaml  import-worker.dockerfile  import_event_orchestrator.dockerfile  import_worker.dockerfile  pyproject.toml
AnimalCrossingServer/.github/: copilot-instructions.md  tdd-instructions.md
AnimalCrossingServer/src/api/: app.py  app_builder.py  config.py  database.py  main.py  migrate.py  start.py
AnimalCrossingServer/src/api/alembic/: env.py
AnimalCrossingServer/src/api/db/: __init__.py  config.py  dependencies.py  event_handler.py  lifespan.py  migrate.py  revision.py  session.py  unit_of_work.py  villager.py  villager_repository.py
AnimalCrossingServer/src/api/messagebus/: config.py  event_publisher.py  lifespan.py  migrate.py  producer.py
AnimalCrossingServer/src/api/telemetry/: config.py  lifespan.py
AnimalCrossingServer/src/api/villagers/: __init__.py  delete.py  get_by_name.py  repository.py  router.py  save.py
AnimalCrossingServer/src/api_client/: __init__.py  client.py
AnimalCrossingServer/src/api_contract/villagers/: get_by_name.py  save.py
AnimalCrossingServer/src/automatcher/: main.py  start.py
AnimalCrossingServer/src/features/: __init__.py  example_feature.py
AnimalCrossingServer/src/import_event_orchestrator/: app.py  dependencies.py  kafka_command_dispatcher.py  migrate.py  start.py  villager_import_orchestrator.py
AnimalCrossingServer/src/import_event_orchestrator/db/: revision.py  saga_repository.py  saga_state.py
AnimalCrossingServer/src/import_worker/: app.py  config.py  dependencies.py  main.py  migrate.py  start.py
AnimalCrossingServer/src/import_worker/db/: migrate.py  revision.py  snapshot.py
AnimalCrossingServer/src/import_worker/diff_snapshot/: handler.py
AnimalCrossingServer/src/import_worker/download_snapshot/: client.py  handler.py
AnimalCrossingServer/src/messaging/: README.md  __init__.py  consumer.py  message.py  migrate.py  serialize.py  topics.py
AnimalCrossingServer/src/messaging/handler/: __init__.py  bootstrap_signals.py  handler_app.py  handler_endpoint.py  handler_endpoint_collection.py
AnimalCrossingServer/src/messaging/import/: commands.py
AnimalCrossingServer/src/messaging/imports/: commands.py  events.py
AnimalCrossingServer/src/messaging/kafka/: __init__.py  dependency.py  kafka_message_dispatcher.py  kafka_message_handler_app.py  producer.py
AnimalCrossingServer/src/messaging/villager/: events.py
AnimalCrossingServer/test/: api_mock.py  conftest.py  test_should_fetch_villager_by_name_integration.py  test_should_persist_villager_integration.py  test_should_persist_villager_with_alembic_migrations.py
AnimalCrossingServer/test/api/: conftest.py
AnimalCrossingServer/test/api/db/: test_migrations.py
AnimalCrossingServer/test/api/messagebus/: conftest.py  kafka_consumer_context.py  test_event_published_on_request.py  test_event_publisher_publish.py
AnimalCrossingServer/test/api/villagers/: in_memory_repository.py  in_memory_unit_of_work.py
AnimalCrossingServer/test/api_client/: conftest.py  test_villager_delete.py  test_villager_save.py
AnimalCrossingServer/test/db/: test_event_handler_collection.py
AnimalCrossingServer/test/eventbus/: conftest.py  test_publish_to_kafka.py
AnimalCrossingServer/test/features/amiibo/: getbyid_test.py
AnimalCrossingServer/test/features/characters/: getbyamiiboid_test.py
AnimalCrossingServer/test/import_event_orchestrator/: conftest.py  doubles.py  test_app.py  test_kafka_command_dispatcher.py  test_start.py  test_villager_import_orchestrator.py
AnimalCrossingServer/test/import_worker/: conftest.py  test_http_call.py  test_nookipedia_client.py
AnimalCrossingServer/test/messagebus/: conftest.py  kafka_consumer_context.py  test_event_published_on_request.py  test_event_publisher_publish.py
AnimalCrossingServer/test/messaging/: test_deserialize.py  test_kafka_command_dispatcher.py  test_serialize.py
AnimalCrossingServer/test/villagers/: in_memory_repository.py  in_memory_unit_of_work.py  test_create_event.py  test_get_by_name.py  test_migrations.py  test_save.py  test_save_handler.py
(+57 files in other folders)
