[project]
name = "animal-crossing-server"
dynamic = ["version"]
requires-python = ">= 3.14"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]",
    "SQLAlchemy",
    "pydantic-settings"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[tool.pytest.ini_options]
pythonpath = "./src"

[tool.ruff]
lint.select = ["E", "F", "I", "B", "ANN", "N"]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["F811", "ANN"]