[project]
name = "animal-crossing-server"
dynamic = ["version"]
requires-python = ">= 3.14"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]",
    "SQLAlchemy",
    "pydantic-settings",
    "pymysql"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "testcontainers"
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[project.scripts]
import-worker = "import_worker.start:main"
api = "api.start:main"
automatcher = "automatcher.start:main"

[tool.pytest.ini_options]
pythonpath = "./src"

[tool.ruff]
lint.select = ["E", "F", "I", "B", "ANN", "N"]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["F811", "ANN"]