[project]
name = "animal-crossing-server"
dynamic = ["version"]
requires-python = ">= 3.14"
dependencies = [
    "dependency-injector",
    "fastapi[standard-no-fastapi-cloud-cli]",
    "SQLAlchemy[asyncio]",
    "pydantic-settings",
    "pymysql",
    "aiokafka",
    "aiomysql",
    "alembic",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-asyncio",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-sqlalchemy",
    "opentelemetry-exporter-otlp-proto-grpc"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "testcontainers",
    "httpx",
    "asgi-lifespan"
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[project.scripts]
import-worker = "import_worker.start:main"
import-worker-migrate = "import_worker.migrate:main"
import-worker-db-revision = "import_worker.db.revision:main"
api = "api.start:main"
api-migrate = "api.migrate:main"
api-db-revision = "api.db.revision:main"
messaging-migrate = "messaging.migrate:main"
automatcher = "automatcher.start:main"
import-event-orchestrator = "import_event_orchestrator.start:main"
import-event-orchestrator-migrate = "import_event_orchestrator.migrate:main"
import-event-orchestrator-db-revision = "import_event_orchestrator.db.revision:main"

[tool.pytest.ini_options]
pythonpath = "./src"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow"
]

[tool.ruff]
lint.select = ["E", "F", "I", "B", "ANN", "N"]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["F811", "ANN"]

[tool.alembic]

# path to migration scripts.
# this is typically a path given in POSIX (e.g. forward slashes)
# format, relative to the token %(here)s which refers to the location of this
# ini file
script_location = "%(here)s/src/api/db/alembic"

# template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
# Uncomment the line below if you want the files to be prepended with date and time
# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
# for all available tokens
# file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"
# Or organize into date-based subdirectories (requires recursive_version_locations = true)
# file_template = "%%(year)d/%%(month).2d/%%(day).2d_%%(hour).2d%%(minute).2d_%%(second).2d_%%(rev)s_%%(slug)s"

# additional paths to be prepended to sys.path. defaults to the current working directory.
prepend_sys_path = [
    "."
]

[tool.animal_crossing.migrations.api]
script_location = "src/api/db/alembic"
version_table = "api_version"

[tool.animal_crossing.migrations.import_event_orchestrator]
script_location = "src/import_event_orchestrator/db/alembic"
version_table = "import_event_orchestrator_version"

[tool.animal_crossing.migrations.import_worker]
script_location = "src/import_worker/db/alembic"
version_table = "import_worker_version"


[[tool.alembic.post_write_hooks]]
# lint with attempts to fix using "ruff" - use the module runner, against the "ruff" module
name = "ruff"
type = "module"
module = "ruff"
options = "check --fix REVISION_SCRIPT_FILENAME"

